--- a/Asp_8/Views/BookStore/Main.cshtml
+++ b/Asp_8/Views/BookStore/Main.cshtml
@@ -1,7 +1,25 @@
-﻿<div class="container">
+﻿@model string
+
+<div class="container">
+    @if (Model != null)
+    {
+        if (Model.Last() == ')')
+        {
+            <div class="alert alert-success">
+                <strong>Success!</strong> @Model
+            </div>
+        }
+        else if(Model.Last() == '(')
+        {
+            <div class="alert alert-danger">
+                <strong>Success!</strong> @Model
+            </div>
+        }
+    }
+
     <div class="row align-items-center">
         <div class="col-md-6 my-lg-5">
-            <a href="#" data-bs-toggle="modal" data-bs-target=".add-new" class="btn btn-primary"><i class="bx bx-plus me-1"></i> Add New</a>
+            <a href="/bookStore/add">Add New</a>
         </div>
     </div>
     <div class="row">
@@ -24,15 +42,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var item in ViewBag.Dt)
+                            @foreach (BookViewModel item in ViewBag.Dt)
                             {
                                 <tr>
-                                    <td>@item.Id</td>
+                                    <td>@item.BookId</td>
                                     <td>@item.Name</td>
-                                    <td>@item.CategoryName</td>
-                                    <td>@item.ThemeName</td>
+                                    <td>@item.Category</td>
+                                    <td>@item.Theme</td>
                                     <td>@item.AuthorName  @item.AuthorSurname</td>
-                                    <td>@item.PressName</td>
+                                    <td>@item.Press</td>
                                     <td>@item.Price azn</td>
                                     <td>@item.Count</td>
                                     <td>@item.Description</td>
@@ -41,7 +59,7 @@
                                             <li class="list-inline-item dropdown">
                                                 <a class="text-muted dropdown-toggle font-size-18 px-2" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true"><i class="bx bx-dots-vertical-rounded"></i></a>
                                                 <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item link-danger" href="#">Delete</a><a class="dropdown-item link-info" href="#">Edit</a>
+                                                    <a class="dropdown-item link-danger" href="/bookStore/delete/@item.BookId">Delete</a><a class="dropdown-item link-info" href="/bookStore/edit/@item.BookId">Edit</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -54,26 +72,26 @@
             </div>
         </div>
     </div>
-@*    <div class="row g-0 align-items-center pb-4">
-        <div class="col-sm-6">
-            <div><p class="mb-sm-0">Showing 1 to 10 of 57 entries</p></div>
-        </div>
-        <div class="col-sm-6">
-            <div class="float-sm-end">
-                <ul class="pagination mb-sm-0">
-                    <li class="page-item disabled">
-                        <a href="#" class="page-link"><i class="mdi mdi-chevron-left"></i></a>
-                    </li>
-                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item">
-                        <a href="#" class="page-link"><i class="mdi mdi-chevron-right"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    @*    <div class="row g-0 align-items-center pb-4">
+    <div class="col-sm-6">
+    <div><p class="mb-sm-0">Showing 1 to 10 of 57 entries</p></div>
+    </div>
+    <div class="col-sm-6">
+    <div class="float-sm-end">
+    <ul class="pagination mb-sm-0">
+    <li class="page-item disabled">
+    <a href="#" class="page-link"><i class="mdi mdi-chevron-left"></i></a>
+    </li>
+    <li class="page-item active"><a href="#" class="page-link">1</a></li>
+    <li class="page-item"><a href="#" class="page-link">2</a></li>
+    <li class="page-item"><a href="#" class="page-link">3</a></li>
+    <li class="page-item"><a href="#" class="page-link">4</a></li>
+    <li class="page-item"><a href="#" class="page-link">5</a></li>
+    <li class="page-item">
+    <a href="#" class="page-link"><i class="mdi mdi-chevron-right"></i></a>
+    </li>
+    </ul>
+    </div>
+    </div>
     </div>*@
 </div>
