--- a/Asp_8/Views/BookStore/Main.cshtml
+++ b/Asp_8/Views/BookStore/Main.cshtml
@@ -1,15 +1,15 @@
-﻿@model string
+﻿@model Book_messageVM
 
 <div class="container">
-    @if (Model != null)
+    @if (Model != null && Model.Message != null)
     {
-        if (Model.Last() == ')')
+        if (Model.Message.Last() == ')')
         {
             <div class="alert alert-success">
                 <strong>Success!</strong> @Model
             </div>
         }
-        else if(Model.Last() == '(')
+        else if (Model.Message.Last() == '(')
         {
             <div class="alert alert-danger">
                 <strong>Success!</strong> @Model
@@ -19,79 +19,30 @@
 
     <div class="row align-items-center">
         <div class="col-md-6 my-lg-5">
-            <a href="/bookStore/add">Add New</a>
+            <a class="btn btn-primary btn-lg btn-block" href="/bookStore/add">Add New</a>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <div class="">
-                <div class="table-responsive">
-                    <table class="table table-striped table-dark table-hover">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Id</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Category</th>
-                                <th scope="col">Theme</th>
-                                <th scope="col">Author</th>
-                                <th scope="col">Press</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Count</th>
-                                <th scope="col">Description</th>
-                                <th scope="col" style="width: 200px;">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (BookViewModel item in ViewBag.Dt)
-                            {
-                                <tr>
-                                    <td>@item.BookId</td>
-                                    <td>@item.Name</td>
-                                    <td>@item.Category</td>
-                                    <td>@item.Theme</td>
-                                    <td>@item.AuthorName  @item.AuthorSurname</td>
-                                    <td>@item.Press</td>
-                                    <td>@item.Price azn</td>
-                                    <td>@item.Count</td>
-                                    <td>@item.Description</td>
-                                    <td>
-                                        <ul class="list-inline mb-0">
-                                            <li class="list-inline-item dropdown">
-                                                <a class="text-muted dropdown-toggle font-size-18 px-2" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true"><i class="bx bx-dots-vertical-rounded"></i></a>
-                                                <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item link-danger" href="/bookStore/delete/@item.BookId">Delete</a><a class="dropdown-item link-info" href="/bookStore/edit/@item.BookId">Edit</a>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+            <div class="table-responsive">
+                <table style="min-height: 150px;" class="table table-striped table-dark table-hover">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th class="text-center" scope="col">Id</th>
+                            <th class="text-center" scope="col">Name</th>
+                            <th class="text-center" scope="col">Category</th>
+                            <th class="text-center" scope="col">Theme</th>
+                            <th class="text-center" scope="col">Author</th>
+                            <th class="text-center" scope="col">Press</th>
+                            <th class="text-center" scope="col">Price</th>
+                            <th class="text-center" scope="col">Count</th>
+                            <th class="text-center" scope="col">Description</th>
+                            <th class="text-center" scope="col" style="width: 200px;">Action</th>
+                        </tr>
+                    </thead>
+                    <books items="@Model"></books>
+                </table>
             </div>
         </div>
     </div>
-    @*    <div class="row g-0 align-items-center pb-4">
-    <div class="col-sm-6">
-    <div><p class="mb-sm-0">Showing 1 to 10 of 57 entries</p></div>
-    </div>
-    <div class="col-sm-6">
-    <div class="float-sm-end">
-    <ul class="pagination mb-sm-0">
-    <li class="page-item disabled">
-    <a href="#" class="page-link"><i class="mdi mdi-chevron-left"></i></a>
-    </li>
-    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-    <li class="page-item"><a href="#" class="page-link">2</a></li>
-    <li class="page-item"><a href="#" class="page-link">3</a></li>
-    <li class="page-item"><a href="#" class="page-link">4</a></li>
-    <li class="page-item"><a href="#" class="page-link">5</a></li>
-    <li class="page-item">
-    <a href="#" class="page-link"><i class="mdi mdi-chevron-right"></i></a>
-    </li>
-    </ul>
-    </div>
-    </div>
-    </div>*@
 </div>
