--- a/Asp_8/Views/BookStore/Main.cshtml
+++ b/Asp_8/Views/BookStore/Main.cshtml
@@ -40,7 +40,7 @@
                             <th class="text-center" scope="col" style="width: 200px;">Action</th>
                         </tr>
                     </thead>
-                    <books items="@Model"></books>
+                    <books id="10" items="@Model"></books>
                 </table>
             </div>
         </div>
