--- a/Asp_8/Areas/Admin/Views/AdminBookStore/Add.cshtml
+++ b/Asp_8/Areas/Admin/Views/AdminBookStore/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BookViewModel
 
 <div class="d-flex justify-content-center">
-    <form asp-controller="BookStore" asp-action="Add" enctype="multipart/form-data">
+    <form asp-area="Admin" asp-controller="AdminBookStore" asp-action="Add" enctype="multipart/form-data">
         <div class="form-control">
 
             <label class="pd10">Book Name<span>*</span></label>
