--- a/Asp_8/Areas/Admin/Views/AdminBookStore/Edit.cshtml
+++ b/Asp_8/Areas/Admin/Views/AdminBookStore/Edit.cshtml
@@ -7,7 +7,7 @@
 </style>
 <h2>Edit Product</h2>
 
-<form asp-asp-controller="bookStore" asp-action="Edit">
+<form asp-area="Admin" asp-controller="AdminBookStore" asp-action="Edit">
     <div class="form-group">
         <div class="form-group">
             <label asp-for="BookId"></label>
