--- a/Asp_8/Areas/User/Views/BookStore/Main.cshtml
+++ b/Asp_8/Areas/User/Views/BookStore/Main.cshtml
@@ -1,6 +1,14 @@
 ﻿@model IQueryable<BookViewModel>
 
 <div class="container">
+    <div class="text-center">
+        <h1 class="bg-warning">User page</h1>
+    </div>
+    <div class="row align-items-center">
+        <div class="col-md-6 my-lg-5">
+            <a class="btn btn-primary btn-lg btn-block" asp-area="Admin" asp-controller="AdminBookStore" asp-action="Main">Go to Admin</a>
+        </div>
+    </div>
     <div class="row">
         <div class="col-lg-12">
             <div class="table-responsive">
