--- a/Asp_8/Areas/Admin/Views/AdminBookStore/Main.cshtml
+++ b/Asp_8/Areas/Admin/Views/AdminBookStore/Main.cshtml
@@ -1,10 +1,9 @@
 ﻿@model IQueryable<BookViewModel>
 
-<div class="container">
+<div class="container-fluid">
     <div class="text-center">
-        <h1 class="bg-warning">Admin page</h1>
+        <h1 style="background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%); min-height: 60px" >Admin page</h1>
     </div>
-
 
     @if (TempData["N"] != null && TempData["N"]?.ToString() != string.Empty)
     {
@@ -24,20 +23,13 @@
         TempData["N"] = string.Empty;
     }
 
-    <div class="row d-flex align-content-around">
-        <div class="col-md-6 my-lg-5">
-            <a class="btn btn-primary btn-lg btn-block" asp-area="Admin" asp-controller="AdminBookStore" asp-action="Add">Add New</a>
-        </div>
-
-        <div class="col-md-6 my-lg-5">
-            <a class="btn btn-primary btn-lg btn-block" asp-area="User" asp-controller="BookStore" asp-action="Main">Go to User</a>
-        </div>
-    </div>
-
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-12 col-md-3">
+            @await Component.InvokeAsync("Category")
+        </div>
+        <div class="col-12 col-md-9">
             <div class="table-responsive">
-                <table style="min-height: 150px;" class="table table-striped table-dark table-hover">
+                <table class="min-vh-30 table table-striped table-dark table-hover">
                     <thead class="thead-dark">
                         <tr>
                             <th class="text-center" scope="col">Id</th>
