--- a/Asp_8/Areas/User/Views/Shared/_Layout.cshtml
+++ b/Asp_8/Areas/User/Views/Shared/_Layout.cshtml
@@ -13,16 +13,23 @@
     <header class="text-bg-dark">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="BookStore" asp-action="Main">BookStore</a>
+                <a class="navbar-brand" asp-area="Admin" asp-controller="AdminBookStore" asp-action="Main">BookStore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav ">
+                        <li class="px-lg-5 nav-item list-unstyled d-md-inline">
+                            <a class="nav-link btn btn-outline-secondary " asp-area="Admin" asp-controller="AdminBookStore" asp-action="Main">Go to Admin</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div>
+        <main>
             @RenderBody()
         </main>
     </div>
