--- a/Asp_8/Areas/User/Views/_ViewImports.cshtml
+++ b/Asp_8/Areas/User/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Asp_8.Entites;
-@using Asp_8.Areas.User.Models;
+@using BookStore.WebUI.Areas.User.Models;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Asp_8
