--- a/Asp_8/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Asp_8/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using BookStore.WebUI.Areas.User.Models;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Asp_8
+@addTagHelper *, BookStore.WebUI
