--- a/Asp_8/Areas/User/Views/BookStore/Main.cshtml
+++ b/Asp_8/Areas/User/Views/BookStore/Main.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<BookViewModel>
+﻿@model IEnumerable<BookViewModel>
 
 <div class="container-fluid">
     <div class="text-center">
