--- a/Asp_8/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Asp_8/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header class="text-bg-dark">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="Admin" asp-controller="AdminBookStore" asp-action="Main">BookStore</a>
+                <a class="navbar-brand" asp-area="Admin" asp-controller="AdminBookStore">BookStore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
