--- a/Asp_8/Areas/User/Views/Shared/Components/Category/default.cshtml
+++ b/Asp_8/Areas/User/Views/Shared/Components/Category/default.cshtml
@@ -4,6 +4,14 @@
     <li class="bg-dark text-white list-group-item text-center"><strong>Categories</strong></li>
     @foreach (var item in Model.Categories!)
     {
-        <li class="list-group-item text-center list-group-item-action">@item.Name</li>
+        var css = "list-group-item";
+        @if (item.Id == Model.CurrentCategory)
+        {
+            css += " active";
+        }
+
+        <li>
+            <a style="display:block;cursor:pointer;" class="@css text-center list-group-item-action" href="user?category=@item.Id">@item.Name</a>
+        </li>
     }
 </ul>
