--- a/Asp_8/Areas/User/Views/BookStore/Main.cshtml
+++ b/Asp_8/Areas/User/Views/BookStore/Main.cshtml
@@ -11,22 +11,9 @@
         <div class="col-12 col-md-9">
             <div class="table-responsive">
                 <table style="min-height: 450px;" class="min-vh-30 table table-striped table-dark table-hover">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th class="text-center" scope="col">Id</th>
-                            <th class="text-center" scope="col">Name</th>
-                            <th class="text-center" scope="col">Category</th>
-                            <th class="text-center" scope="col">Theme</th>
-                            <th class="text-center" scope="col">Author</th>
-                            <th class="text-center" scope="col">Press</th>
-                            <th class="text-center" scope="col">Price</th>
-                            <th class="text-center" scope="col">Count</th>
-                            <th class="text-center" scope="col">Description</th>
-                        </tr>
-                    </thead>
                     <books Area=false Items="@Model.Books"></books>
                 </table>
-                <books-pager page-count="@Model.PageCount" page-size="@Model.PageSize" current-page="@Model.CurrentPage" role="@Model.Role" current-category="@Model.CurrentCategory"></books-pager>
+                <books-pager page-count="@Model.PageCount" current-page="@Model.CurrentPage" role="@Model.Role" current-category="@Model.CurrentCategory"></books-pager>
             </div>
         </div>
     </div>
