--- a/Asp_8/Areas/User/Views/BookStore/Main.cshtml
+++ b/Asp_8/Areas/User/Views/BookStore/Main.cshtml
@@ -4,6 +4,13 @@
     <div class="text-center">
         <h1 style="background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%); min-height: 60px;" class="bg-warning">User page</h1>
     </div>
+
+    @if (!string.IsNullOrEmpty(TempData["message"]?.ToString()))
+    {
+        <div class="alert alert-success animate__animated animate__bounceInLeft" role="alert">
+            <strong>Success!</strong> @TempData["message"]?.ToString()
+        </div>
+    }
     <div class="row">
         <div class="col-12 col-md-3">
             @await Component.InvokeAsync("Category")
