--- a/Asp_8/Areas/User/Views/Shared/Components/CartSummary/Default.cshtml
+++ b/Asp_8/Areas/User/Views/Shared/Components/CartSummary/Default.cshtml
@@ -8,6 +8,7 @@
                     <tr>
                         <th class="text-center">Name of Books</th>
                         <th class="text-center">Count</th>
+                        <th class="text-center">Remove</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -19,11 +20,12 @@
                             </td>
                             <td class="text-center">
                                 <div class="input-group">
-                                    <button type="button" id="m @item.Book!.Id" class="btn btn-danger btn-number" onclick="minus(@item.Book!.Id)">-</button>
-                                    <input type="number" id="@item.Book.Id" class="form-control input-number myInput text-center" oninput="inputEvent(@item.Book.Id)" value="1" max="@item?.Book?.Count" />
-                                    <button type="button" id="p @item?.Book.Id" class="btn btn-success btn-number" onclick="plus(@item?.Book!.Id)">+</button>
+                                    <button type="button" id="m @item.Book!.Id" class="btn btn-danger btn-number" onclick="minus(@item.Book!.Id, @item.Book!.Price)">-</button>
+                                    <input type="number" id="@item.Book.Id" readonly class="form-control input-number myInput text-center" value="0" max="@item?.Book?.Count" />
+                                    <button type="button" id="p @item?.Book.Id" class="btn btn-success btn-number" onclick="plus(@item?.Book!.Id, @item?.Book!.Price)">+</button>
                                 </div>
                             </td>
+                            <td class="text-center">Del</td>
                         </tr>
                     }
                 </tbody>
@@ -31,7 +33,7 @@
         </li>
     </ul>
     <div class="card-body">
-        <h5 class="card-title">Total => @Model.Cart.Total Azn</h5>
+        <h5 id="h5" class="card-title">Total => 0 Azn</h5>
         <a class="btn btn-primary" asp-controller="Cart" asp-action="List">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
@@ -42,34 +44,51 @@
 </div>
 
 <script>
-    const input = document.querySelectorAll("input"); 
+    const input = document.querySelectorAll("input");
+    const h5 = document.querySelector("h5");
 
     window.onload = function () {
         input.forEach(i => {
             const savedValue = sessionStorage.getItem(i.id);
+            const savedPrice = sessionStorage.getItem('p');
             if (savedValue !== null)
                 i.value = +savedValue > +i.max ? +i.max : +savedValue;
+            if (savedPrice !== null)
+                h5.innerHTML = "Total => " + savedPrice + " Azn";
         });
     }
 
-    function inputEvent(id) {
-        const i = document.getElementById(id)
-        i.value = +i.value > +i.max ? +i.max : +i.value < 1 ? +1 : i.value == '' ? +1 : +i.value;
+    function minus(id, price) {
+        const i = document.getElementById(id);
+        let total = h5.innerHTML.split(' ')[2], temp;
 
-        sessionStorage.setItem(id, i.value)
+        if (+i.value > 1) {
+            --i.value;
+            temp = (+total - +price).toFixed(2);
+        }
+        else
+            temp = total;
+
+        h5.innerHTML = "Total => " + temp + " Azn";
+
+        sessionStorage.setItem(id, i.value);
+        sessionStorage.setItem('p', temp);
     }
 
-    function minus(id) {
+    function plus(id, price) {
         const i = document.getElementById(id);
-        i.value = +i.value > 1 ? --i.value : 1;
+        let total = h5.innerHTML.split(' ')[2], temp;
+
+        if (+i.value < +i.max) {
+            ++i.value;
+            temp = (+total + +price).toFixed(2);
+        }
+        else
+            temp = total;
+
+        h5.innerHTML = "Total => " + temp + " Azn";
 
         sessionStorage.setItem(id, i.value)
-    }
-
-    function plus(id) {
-        const i = document.getElementById(id);
-        i.value = +i.value < +i.max ? ++i.value : +i.max;
-
-        sessionStorage.setItem(id, i.value)
+        sessionStorage.setItem('p', temp);
     }
 </script>
