--- a/Asp_8/Areas/User/Views/BookStore/Main.cshtml
+++ b/Asp_8/Areas/User/Views/BookStore/Main.cshtml
@@ -7,10 +7,20 @@
 
     @if (!string.IsNullOrEmpty(TempData["message"]?.ToString()))
     {
-        <div class="alert alert-success animate__animated animate__bounceInLeft" role="alert">
-            <strong>Success!</strong> @TempData["message"]?.ToString()
-        </div>
+        if (TempData["message"]?.ToString()?.Last() == '!')
+        {
+            <div class="alert alert-danger animate__animated animate__bounceInLeft" role="alert">
+                <strong>Success!</strong> @TempData["message"]?.ToString()
+            </div>
+        }
+        else
+        {
+            <div class="alert alert-success animate__animated animate__bounceInLeft" role="alert">
+                <strong>Success!</strong> @TempData["message"]?.ToString()
+            </div>
+        }
     }
+
     <div class="row">
         <div class="col-12 col-md-3">
             @await Component.InvokeAsync("Category")
