--- a/Asp_8/Areas/Admin/Views/AdminBookStore/Add.cshtml
+++ b/Asp_8/Areas/Admin/Views/AdminBookStore/Add.cshtml
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
 <div>
-    <a class="nav-link btn btn-outline-secondary " asp-area="Admin" asp-controller="AdminBookStore" asp-action="Main">Return Back</a>
+    <a class="nav-link btn btn-outline-secondary " href="/Admin/AdminBookStore/Main">Return Back</a>
 </div>
 <div class="m-4 d-flex justify-content-center">
     <form asp-area="Admin" asp-controller="AdminBookStore" asp-action="Add" enctype="multipart/form-data">
