--- a/Asp_8/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Asp_8/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header class="text-bg-dark">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="Admin" asp-controller="AdminBookStore">BookStore</a>
+                <a class="navbar-brand" href="/Admin/AdminBookStore/Main">BookStore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ">
                         <li class="px-lg-5 nav-item list-unstyled d-md-inline">
-                            <a class="nav-link btn btn-outline-secondary " asp-area="Admin" asp-controller="AdminBookStore" asp-action="Add">Add New</a>
+                            <a class="nav-link btn btn-outline-secondary " href="/Admin/AdminBookStore/Add">Add New</a>
                         </li>
                         <li class="nav-item list-unstyled d-md-inline">
-                            <a class="nav-link btn btn-outline-secondary " asp-area="User" asp-controller="BookStore" asp-action="Main">Go to User</a>
+                            <a class="nav-link btn btn-outline-secondary " href="/User/BookStore/Main">Go to User</a>
                         </li>
                     </ul>
                 </div>
