--- a/Asp_8/Areas/User/Views/Shared/_Layout.cshtml
+++ b/Asp_8/Areas/User/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <header class="text-bg-dark">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="User" asp-controller="BookStore" asp-action="Main">BookStore</a>
+                <a class="navbar-brand" href="/User/BookStore/Main">BookStore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav ">
                         <li class="px-lg-5 nav-item list-unstyled d-md-inline">
-                            <a class="nav-link btn btn-outline-secondary " asp-area="Admin" asp-controller="AdminBookStore" asp-action="Main">Go to Admin</a>
+                            <a class="nav-link btn btn-outline-secondary " href="/Admin/AdminBookStore/Main">Go to Admin</a>
                         </li>
                     </ul>
                     <div class="dropdown dropdown2">
@@ -66,11 +66,6 @@
             @RenderBody()
         </main>
     </div>
-    <footer style="height:2vh" class="border-top footer ">
-        <div class="container">
-            &copy; 2023 - ECommerce.WebUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
